--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,6 @@ header .logo {
     margin: 0 auto;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     font-family: 'Inter', 'Outfit', sans-serif;
 }
 
@@ -38,9 +37,7 @@ header .logo {
 .container h3,
 .container h4 {
     font-family: 'Outfit', sans-serif;
-    font-weight: 600;
-    white-space: pre-wrap;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .container h1 {
@@ -60,6 +57,8 @@ header .logo {
 .container h4 {
     font-size: 30px;
 }
+
+/* css per pagina feedback */
 
 .stars img {
     filter: grayscale(100);
@@ -135,3 +134,42 @@ header .logo {
     justify-content: center;
     font-size: 48px;
   }
+
+ /* css per welcome page*/
+
+  #button form {
+    width: 85%;
+    margin: 0 auto;
+    padding: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: absolute;
+    left: 20px;
+  }
+
+
+  #but {
+    background-color: #00ffff;
+    width: 200px;
+    height: 60px;
+    font-family: 'Inter', sans-serif;
+    border: none;
+  }
+
+  #but:hover {
+    box-shadow: 0px 0px 40px 5px #00ffff;
+  }
+
+  
+#inizio h3 {
+  margin: 0;
+}
+
+ul li {
+  line-height: 1.7;
+}
+
+ul {
+  margin: 0 30;
+}
