--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,56 +82,45 @@ header .logo {
     background-color: red;
 }
 
+/*//////////////////////////////////////////*/
 /* CSS per timer */
-.base-timer {
-    position: relative;
-    width: 300px;
-    height: 300px;
-  }
-  
-  .base-timer__svg {
-    transform: scaleX(-1);
-  }
-  
-  .base-timer__circle {
-    fill: none;
-    stroke: none;
-  }
-  
-  .base-timer__path-elapsed {
-    stroke-width: 7px;
-    stroke: grey;
-  }
-  
-  .base-timer__path-remaining {
-    stroke-width: 7px;
-    stroke-linecap: round;
-    transform: rotate(90deg);
-    transform-origin: center;
-    transition: 1s linear all;
-    fill-rule: nonzero;
-    stroke: currentColor;
-  }
-  
-  .base-timer__path-remaining.green {
-    color: rgb(65, 184, 131);
-  }
-  
-  .base-timer__path-remaining.orange {
-    color: orange;
-  }
-  
-  .base-timer__path-remaining.red {
-    color: red;
-  }
-  
-  .base-timer__label {
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 48px;
-  }
+
+.timer { /*da eliminare*/
+  margin-top: 10px;
+}
+
+.timer > svg { /* Container del timer */
+  width: 200px;
+  height: 200px;
+}
+
+.timer > svg > circle {
+  fill: none;
+  stroke-opacity: 0.3;
+  stroke: #6b6b6b; /*Colore di sotto del border*/
+  stroke-width: 20;
+  transform-origin: center center;
+  transform: rotate(-90deg); 
+}
+
+.timer > svg > circle + circle {
+  stroke-dasharray: 1;
+  stroke-dashoffset: 1;
+  stroke-linecap: square; /*Bordo a punta quadrata*/
+  stroke-opacity: 1;
+  stroke: #00ffff; /*Colore del border*/
+}
+
+.timer > svg > circle + circle {
+  transition: stroke-dashoffset 0.3s ease;
+}
+
+.timer > svg > text {
+  font-size: 2rem;
+
+}
+
+.timer > svg > text + text {
+  font-size: 1rem;
+}
+
