--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,207 +3,212 @@
 
 html,
 body {
-    display: block;
-    margin: 0 auto;
-    padding: 0;
-    border: 0;
-    height: 100vh;
-    background-image: url(../img/bg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+  border: 0;
+  height: 100vh;
+  background-image: url(../img/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
 }
 
 header {
-    width: 85%;
-    margin: 20px auto;
+  width: 85%;
+  margin: 20px auto;
 }
 
 header .logo {
-    width: 12%;
+  width: 12%;
 }
 
 .container {
-    display: flex;
-    width: 85%;
-    margin: 0 auto;
-    flex-direction: column;
-    justify-content: center;
-    font-family: 'Inter', 'Outfit', sans-serif;
+  display: flex;
+  width: 85%;
+  margin: 0 auto;
+  flex-direction: column;
+  justify-content: center;
+  font-family: 'Inter', 'Outfit', sans-serif;
 }
 
 .container h1,
 .container h2,
 .container h3,
 .container h4 {
-    font-family: 'Outfit', sans-serif;
-    font-weight: 500;
+  font-family: 'Outfit', sans-serif;
+  font-weight: 500;
 }
 
 .container h1 {
-    font-size: 60px;
+  font-size: 60px;
 }
 
 .container h2 {
-    font-size: 48px;
+  font-size: 48px;
 }
 
 .container h3 {
-    font-size: 36px;
-    color: #D20094;
-    font-weight: 700;
+  font-size: 36px;
+  color: #D20094;
+  font-weight: 700;
 }
 
 .container h4 {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 /* css per pagina feedback */
 
 .stars img {
-    filter: grayscale(100);
-    cursor: pointer;
+  filter: grayscale(100);
+  cursor: pointer;
 }
 
 .stars img.active {
-    filter: none;
+  filter: none;
 }
 
 .stars img.hover {
-    filter: brightness(1.5);
+  filter: brightness(1.5);
 }
 
 #answers button {
-    background-color: aquamarine;
+  background-color: aquamarine;
 }
 
 #answers button.selected {
-    background-color: red;
+  background-color: red;
 }
 
 /*//////////////////////////////////////////*/
 /* CSS per timer */
 
 
-.timer { /*da eliminare*/
+.timer {
+  /*da eliminare*/
   margin-top: 10px;
 }
 
-.timer > svg { /* Container del timer */
+.timer>svg {
+  /* Container del timer */
   width: 200px;
   height: 200px;
 }
 
-.timer > svg > circle {
+.timer>svg>circle {
   fill: none;
   stroke-opacity: 0.3;
-  stroke: #6b6b6b; /*Colore di sotto del border*/
+  stroke: #6b6b6b;
+  /*Colore di sotto del border*/
   stroke-width: 20;
   transform-origin: center center;
-  transform: rotate(-90deg); 
+  transform: rotate(-90deg);
 }
 
-.timer > svg > circle + circle {
+.timer>svg>circle+circle {
   stroke-dasharray: 1;
   stroke-dashoffset: 1;
-  stroke-linecap: square; /*Bordo a punta quadrata*/
+  stroke-linecap: square;
+  /*Bordo a punta quadrata*/
   stroke-opacity: 1;
-  stroke: #00ffff; /*Colore del border*/
+  stroke: #00ffff;
+  /*Colore del border*/
 }
 
-.timer > svg > circle + circle {
+.timer>svg>circle+circle {
   transition: stroke-dashoffset 0.3s ease;
 }
 
-.timer > svg > text {
+.timer>svg>text {
   font-size: 2rem;
 
 }
 
-.timer > svg > text + text {
+.timer>svg>text+text {
   font-size: 1rem;
 }
 
 .base-timer {
-    position: relative;
-    width: 300px;
-    height: 300px;
-  }
-  
-  .base-timer__svg {
-    transform: scaleX(-1);
-  }
-  
-  .base-timer__circle {
-    fill: none;
-    stroke: none;
-  }
-  
-  .base-timer__path-elapsed {
-    stroke-width: 7px;
-    stroke: grey;
-  }
-  
-  .base-timer__path-remaining {
-    stroke-width: 7px;
-    stroke-linecap: round;
-    transform: rotate(90deg);
-    transform-origin: center;
-    transition: 1s linear all;
-    fill-rule: nonzero;
-    stroke: currentColor;
-  }
-  
-  .base-timer__path-remaining.green {
-    color: rgb(65, 184, 131);
-  }
-  
-  .base-timer__path-remaining.orange {
-    color: orange;
-  }
-  
-  .base-timer__path-remaining.red {
-    color: red;
-  }
-  
-  .base-timer__label {
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 48px;
-  }
+  position: relative;
+  width: 300px;
+  height: 300px;
+}
 
- /* css per welcome page*/
+.base-timer__svg {
+  transform: scaleX(-1);
+}
 
-  #button form {
-    width: 85%;
-    margin: 0 auto;
-    padding: 50px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    position: absolute;
-    left: 20px;
-  }
+.base-timer__circle {
+  fill: none;
+  stroke: none;
+}
+
+.base-timer__path-elapsed {
+  stroke-width: 7px;
+  stroke: grey;
+}
+
+.base-timer__path-remaining {
+  stroke-width: 7px;
+  stroke-linecap: round;
+  transform: rotate(90deg);
+  transform-origin: center;
+  transition: 1s linear all;
+  fill-rule: nonzero;
+  stroke: currentColor;
+}
+
+.base-timer__path-remaining.green {
+  color: rgb(65, 184, 131);
+}
+
+.base-timer__path-remaining.orange {
+  color: orange;
+}
+
+.base-timer__path-remaining.red {
+  color: red;
+}
+
+.base-timer__label {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 48px;
+}
+
+/* css per welcome page*/
+
+#button form {
+  width: 85%;
+  margin: 0 auto;
+  padding: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: absolute;
+  left: 20px;
+}
 
 
-  #but {
-    background-color: #00ffff;
-    width: 200px;
-    height: 60px;
-    font-family: 'Inter', sans-serif;
-    border: none;
-  }
+#but {
+  background-color: #00ffff;
+  width: 200px;
+  height: 60px;
+  font-family: 'Inter', sans-serif;
+  border: none;
+}
 
-  #but:hover {
-    box-shadow: 0px 0px 40px 5px #00ffff;
-  }
+#but:hover {
+  box-shadow: 0px 0px 40px 5px #00ffff;
+}
 
-  
+
 #inizio h3 {
   margin: 0;
 }
@@ -215,4 +220,3 @@ ul li {
 ul {
   margin: 0 30;
 }
-
