--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,36 @@ text {
   align-self: center;
 }
 
+#containerBenchmark fieldset {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  border: none;
+  margin-bottom: 30px;
+} 
+
+.risposte {
+  margin: 10px 0px;
+  padding: 20px;
+  border-radius: 30px;
+  cursor: pointer;
+  border: 4px solid white;
+  flex-basis: 40%;
+}
+
+.risposte:hover {
+  background-color: #D20094;
+}
+
+#containerBenchmark input{
+  opacity: 0.01;
+  z-index: 100;
+}
+
+#containerBenchmark input:checked+label {
+  background: yellow;
+}
+
 /* css per welcome page*/
 
 #procedi form {
