--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
   background-image: url(../img/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   color: white;
 }
 
@@ -75,109 +76,8 @@ header .logo {
   filter: brightness(1.5);
 }
 
-/*//////////////////////////////////////////*/
-/* CSS per timer */
-
-#containerBenchmark {
-  text-align: center;
-}
-
-#headerBenchmark {
-  display: flex;
-  justify-content: space-between;
-}
-
-.timer>svg {
-  /* Container del timer */
-  width: 220px;
-  height: 220px;
-  margin-top: 15px;
-}
-
-.timer>svg>circle {
-  fill: none;
-  stroke-opacity: 0.3;
-  stroke: #6b6b6b;
-  /*Colore di sotto del border*/
-  stroke-width: 20;
-  transform-origin: center center;
-  transform: rotate(-90deg);
-}
-
-.timer>svg>circle+circle {
-  stroke-dasharray: 1;
-  stroke-dashoffset: 1;
-  stroke-linecap: square;
-  /*Bordo a punta quadrata*/
-  stroke-opacity: 1;
-  stroke: #00ffff;
-  /*Colore del border*/
-}
-
-.timer>svg>circle+circle {
-  transition: stroke-dashoffset 0.3s ease;
-}
-
-text {
-  font-size: 0.6rem;
-  fill: white;
-  font-family: 'Outfit', sans-serif;
-}
-
-#timeLeft {
-  font-size: 50px;
-  font-weight: 400;
-  font-family: 'Outfit', sans-serif;
-}
-
-#para {
-  font-family: 'Outfit', sans-serif;
-  text-align: center;
-}
-
-#numberQ {
-  letter-spacing: 0.15rem;
-}
-
-#barraDomanda {
-  color: #D20094;
-}
-
-#nxtBtn {
-  align-self: center;
-}
-
-#containerBenchmark fieldset {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  border: none;
-  margin-bottom: 30px;
-} 
-
-.risposte {
-  margin: 10px 0px;
-  padding: 20px;
-  border-radius: 30px;
-  cursor: pointer;
-  border: 4px solid white;
-  flex-basis: 40%;
-}
-
-.risposte:hover {
-  background-color: #D20094;
-}
-
-#containerBenchmark input{
-  opacity: 0.01;
-  z-index: 100;
-}
-
-#containerBenchmark input:checked+label {
-  background: yellow;
-}
-
-/* css per welcome page*/
+/*//////////////////////////////////////////
+css per welcome page*/
 
 #procedi form {
   width: 85%;
@@ -217,7 +117,126 @@ ul {
   margin: 0 30;
 }
 
-/*feedback*/
+
+/*//////////////////////////////////////////
+CSS per benchmark */
+
+#containerBenchmark {
+  text-align: center;
+  margin-top: -20px;
+}
+
+#headerBenchmark {
+  display: flex;
+  justify-content: space-between;
+}
+
+#containerBenchmark h2 {
+  font-size: 40px;
+  width: 70%;
+  align-self: center;
+}
+
+.timer>svg {
+  /* Container del timer */
+  width: 220px;
+  height: 220px;
+  margin-top: -10px;
+}
+
+.timer>svg>circle {
+  fill: none;
+  stroke-opacity: 0.3;
+  stroke: #6b6b6b;
+  /*Colore di sotto del border*/
+  stroke-width: 15;
+  transform-origin: center center;
+  transform: rotate(-90deg);
+}
+
+.timer>svg>circle+circle {
+  stroke-dasharray: 1;
+  stroke-dashoffset: 1;
+  stroke-linecap: square;
+  /*Bordo a punta quadrata*/
+  stroke-opacity: 1;
+  stroke: #00ffff;
+  /*Colore del border*/
+}
+
+.timer>svg>circle+circle {
+  transition: stroke-dashoffset 0.3s ease;
+}
+
+text {
+  font-size: 0.6rem;
+  fill: white;
+  font-family: 'Outfit', sans-serif;
+}
+
+#timeLeft {
+  font-size: 50px;
+  font-weight: 400;
+  font-family: 'Outfit', sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+#para {
+  font-family: 'Outfit', sans-serif;
+  text-align: center;
+}
+
+#numberQ {
+  letter-spacing: 0.15rem;
+}
+
+#nxtBtn {
+  align-self: center;
+}
+
+#containerBenchmark fieldset {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  border: none;
+  margin-bottom: 30px;
+  align-items: center;
+} 
+
+#containerBenchmark input:checked + label{
+  background-color: #D20094;
+  border: none;
+}
+
+.risposte {
+  margin: 10px 0px;
+  padding: 20px;
+  border-radius: 30px;
+  cursor: pointer;
+  flex-basis: 35%;
+  max-width: 45%;
+  box-shadow: inset 2px 2px 2px 1.5px #fffffff4;
+  background-color: rgba(255, 255, 255, 0.077);
+}
+
+.risposte:hover {
+  background-color: rgba(210,0,148,0.6);
+}
+
+#containerBenchmark input{
+  visibility: hidden;
+  z-index: 100;
+}
+
+
+#barraDomanda {
+  color: #D20094;
+}
+
+/*//////////////////////////////////////////
+CSS per feedback */
 
 #containerFeedback {
   text-align: center;
@@ -246,4 +265,5 @@ ul {
 .lasciaFeedback {
   margin-top: 80px;
 }
-/*
+
+
