--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ header .logo {
 
 .container h1 {
   font-size: 60px;
+  line-height: 1;
 }
 
 .container h2 {
@@ -59,21 +60,7 @@ header .logo {
 
 .container h4 {
   font-size: 30px;
-}
-
-/* css per pagina feedback */
-
-.stars img {
-  filter: grayscale(100);
-  cursor: pointer;
-}
-
-.stars img.active {
-  filter: none;
-}
-
-.stars img.hover {
-  filter: brightness(1.5);
+  font-weight: 400;
 }
 
 /*//////////////////////////////////////////
@@ -87,7 +74,8 @@ css per welcome page*/
   flex-direction: row;
   justify-content: space-between;
   position: absolute;
-  left: 20px;
+  left: 0px;
+  align-items: center;
 }
 
 
@@ -96,6 +84,7 @@ css per welcome page*/
   width: 200px;
   height: 60px;
   font-family: 'Inter', sans-serif;
+  font-weight: 600;
   border: none;
   cursor: pointer;
 }
@@ -114,9 +103,37 @@ ul li {
 }
 
 ul {
-  margin: 0 30;
+  margin-left: 0;
 }
 
+#checkbox {
+  display: flex;
+  align-items: center;
+}
+
+#promise {
+  visibility: hidden;
+}
+
+#promise + label:before {
+  content: '';
+  appearance: none;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
+  border: 2px solid #ffffff;
+  outline: none;
+  cursor: pointer;
+}
+
+#promise:checked + label:before {
+  content: '✔';
+}
+
+#inizio {
+  width: 50%;
+}
 
 /*//////////////////////////////////////////
 CSS per benchmark */
@@ -230,10 +247,99 @@ text {
   z-index: 100;
 }
 
-
-#barraDomanda {
+#totQuestions {
   color: #D20094;
 }
+
+
+/*//////////////////////////////////////////
+CSS per result */
+#containerResult {
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Outfit';
+}
+
+#containerResult h1 {
+  margin: 5px;
+}
+
+#containerResult h2 {
+  margin-bottom: 10px;
+}
+
+#containerResult h4 {
+  margin-top: 0px;
+  margin-bottom: 30px;
+}
+
+#containerResult .titolo {
+  text-align: center;
+}
+
+#risultato {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
+  width: 90%;
+}
+
+#centro {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 350px;
+}
+
+#centriamolo {
+  position: absolute;
+  text-align: center;
+}
+
+#grafico {
+  width: 300px;
+  height: 300px;
+}
+
+#corrette, #sbagliate {
+  margin: 30px;
+  width: 25%;
+}
+
+#sbagliate {
+  text-align: right;
+}
+#btnFeedback {
+  border: 2px solid #ffffff;
+  background: none;
+}
+
+#btnFeedback a {
+  text-decoration: none;
+  font-weight: 700;
+  color: white;
+}
+
+.perc {
+  margin: 0;
+  line-height: 0.7;
+  font-size: 48px;
+  font-weight: 800;
+}
+
+#ohNo {
+  color: #D20094;
+  font-size: 24px;
+}
+
+#congrats {
+  color: #00ffff;
+  font-size: 24px;
+}
+
+
 
 /*//////////////////////////////////////////
 CSS per feedback */
@@ -266,4 +372,22 @@ CSS per feedback */
   margin-top: 80px;
 }
 
+.stars img {
+  filter: grayscale(100);
+  cursor: pointer;
+}
 
+.stars img.active {
+  filter: none;
+}
+
+.stars img.hover {
+  filter: brightness(1.5);
+  transition: ease-in;
+}
+
+#infoBtn a {
+  text-decoration: none;
+  font-weight: 700;
+  color: rgb(0, 0, 0);
+}
