--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@ body {
   margin: 0 auto;
   padding: 0;
   border: 0;
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
   background-image: url(../img/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -18,6 +18,7 @@ body {
 
 header {
   width: 85%;
+  height: 55px;
   margin: 20px auto;
 }
 
@@ -26,13 +27,26 @@ header .logo {
   margin-top: 20px;
 }
 
+
+main {
+  width: 100%;
+  margin: 0 auto;
+  padding: 50px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   display: flex;
   width: 85%;
+  height: 100%;
   margin: 0 auto;
   flex-direction: column;
   justify-content: center;
   font-family: 'Inter', 'Outfit', sans-serif;
+
 }
 
 .container h1,
@@ -68,6 +82,7 @@ header .logo {
   width: 200px;
   height: 60px;
   font-family: 'Inter', sans-serif;
+  text-align: center;
   font-weight: 600;
   border: none;
   cursor: pointer;
@@ -79,17 +94,12 @@ header .logo {
 
 /*//////////////////////////////////////////
 css per welcome page*/
+#containerWelcome {
+align-self: center;
+}
 
-#procedi form {
-  width: 85%;
-  margin: 0 auto;
-  padding: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  position: absolute;
-  left: 0px;
-  align-items: center;
+#inizio {
+  width: 50%;
 }
 
 #inizio h3 {
@@ -104,6 +114,23 @@ ul {
   margin-left: 0;
 }
 
+#procedi {
+  width: 100%;
+  height: max-content;
+  margin: 0 auto;
+  padding: 0;
+  margin-top: 40px;
+}
+
+#procedi form {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 #checkbox {
   display: flex;
   align-items: center;
@@ -111,6 +138,7 @@ ul {
 
 #promise {
   visibility: hidden;
+  position: absolute;
 }
 
 #promise + label:before {
@@ -129,8 +157,8 @@ ul {
   content: '✔';
 }
 
-#inizio {
-  width: 50%;
+#promise:checked + label {
+  text-decoration: underline;
 }
 
 /*//////////////////////////////////////////
@@ -144,6 +172,7 @@ CSS per benchmark */
 #headerBenchmark {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 0px;
 }
 
 #containerBenchmark h2 {
@@ -309,9 +338,17 @@ CSS per result */
 #sbagliate {
   text-align: right;
 }
+
 #btnFeedback {
   border: 2px solid #ffffff;
   background: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#btnFeedback:hover {
+  box-shadow: 0px 0px 40px 5px #ffffff;
 }
 
 #btnFeedback a {
@@ -344,6 +381,7 @@ CSS per feedback */
 
 #containerFeedback {
   text-align: center;
+  width: 60%;
 }
 
 
